Revision history for {{$dist->name}}

{{$NEXT}}

0.001000_10 2010-05-18 00:07:31 CST6CDT
       - upgrade_directory is wrong and vague, instead we use script_directory
       - stricter validation (no undef) on versions to prevent weird surprises
       - change method args to named args
       - document method args
       - preconnect should not connect to the database

0.001000_09 2010-05-15 23:19:05 CST6CDT
       - Schemata is no longer required to add version checking component

0.001000_08 2010-05-11 22:42:20 CST6CDT
       - Add missing dep namespace::autoclean

0.001000_07 2010-05-09 01:59:59 CST6CDT
       - Downgrades swap from version and to version, so instead of up 1-2
         being down 1-2, it's down 2-1, which clearly makes more sense
       - perl scripts are now just anonymous subroutines, instead of files
         with a single run subroutine
       - Serious changes to architecture by using MXRP instead
         of lots of repetitive roles

0.001000_06 2010-05-05 00:46:24 CST6CDT
       - Add a bunch of boilerplate and not so boilerplate doc
       - rename sqltargs attribute to sql_translator_args

0.001000_05 2010-05-04 13:37:29 CST6CDT
       - put schema_version attr in more places

0.001000_04 2010-04-27 13:29:14 CST6CDT
       - schema_version is now an attr so that users can more easily force the
         version of the schema
       - add prepare_install method which installs everything as well as the
         version storage

0.001000_03 2010-04-20 23:19:36 CST6CDT
       - bump File::Path dep

0.001000_02 2010-04-19 18:46:16 CST6CDT
       - add autodie as dep

0.001000_01
       - initial dev release