@@ -21,6 +21,7 @@ remove = MetaYAML
 [Prereq]
 autodie                     = 0
 namespace::autoclean        = 0
+Log::Contextual             = 0.00201
 File::Path                  = 2.08
 File::Touch                 = 0.08
 DBIx::Class                 = 0.08121
